<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:title="NEWS">
            <menu>
                <item
                    android:id="@+id/nav_all_news"
                    android:icon="@drawable/ic_menu_news"
                    android:title="News" />
                <item
                    android:id="@+id/nav_health"
                    android:icon="@drawable/ic_menu_health"
                    android:title="Health" />
                <item
                    android:id="@+id/nav_other"
                    android:icon="@drawable/ic_menu_other"
                    android:title="@string/Top" />
            </menu>
        </item>


        <item android:title="Sport">
            <menu>
                <item
                    android:id="@+id/nav_soccer"
                    android:icon="@drawable/ic_menu_soccer"
                    android:title="@string/soccer" />

                <item
                    android:id="@+id/nav_ridding"
                    android:icon="@drawable/ic_menu_horse_racing"
                    android:title="@string/horse_racing" />

                <item
                    android:id="@+id/nav_cycling"
                    android:icon="@drawable/ic_menu_cycling"
                    android:title="@string/cycling" />

                <item
                    android:id="@+id/nav_boxing"
                    android:icon="@drawable/ic_menu_boxing"
                    android:title="@string/boxing" />
            </menu>
        </item>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
        </menu>
    </item>
    </group>
</menu>
